Tasarım başlangıç hoverlar eklenecek

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
         <div class="digit">8</div>
         <div class="digit">9</div>
         <div class="operator">*</div>
-        <div class="digit">AC</div>
+        <div class="delete">AC</div>
         <div class="digit">0</div>
-        <div class="digit">C</div>
-        <div class="digit">/</div>
-        <div class="delete">.</div>
-        <div class="delete">=</div>
+        <div class="delete">C</div>
+        <div class="operator">/</div>
+        <div class="others">.</div>
+        <div class="others">=</div>
 
     </div>
 
