Buttonlar tamamlandı klavye tuş takımı entegre değil birtek o kaldı

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="digit" >0</div>
         <div class="delete" id="c">C</div>
         <div class="operator">/</div>
-        <div class="others">.</div>
+        <div class="others" id="dot">.</div>
         <div class="others" id="equal">=</div>
 
     </div>
