--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     </div>
 
-    <footer><i class="fa-brands fa-github"></i> cemilkb</footer>
+    <footer><a href="https://github.com/cemilkb" target="_blank"><i class="fa-brands fa-github"></i> cemilkb</a></footer>
 
 
     <script src="script.js"></script>
